--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-mediapipe = "^0.10.9"
+mediapipe = "=0.10.9"  # has to be this version for macos!
 tensorflow = {version = "2.13.0", platform = "darwin"}
 
 [tool.poetry.group.dev.dependencies]
